staging/src/github.com/labring/service/hub/deploy/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hub-service-ingress
  namespace: hub-service-system
  labels:
    app: hub-service
  annotations:
    cert-manager.io/issuer: cluster-issuer-hub-service
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: hubauth.login.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hub-service-manager
                port:
                  number: 5001
  tls:
    - hosts:
        - hubauth.login.sealos.io
      secretName: hubauth-login-sealos-io-cert
